update flow install/uninstall mechanism